plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group   = 'cg.egjs.autorent'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
}

dependencies {
    // MySQL JDBC
    implementation 'com.mysql:mysql-connector-j:8.3.0'
    // BCrypt
    implementation 'org.mindrot:jbcrypt:0.4'
    // iText 7 — génération PDF contrats
    implementation 'com.itextpdf:itext7-core:7.2.6'
    // Logging
    implementation 'org.slf4j:slf4j-simple:2.0.9'
}

application {
    mainClass = 'cg.egjs.autorent.app.MainApp'
    applicationDefaultJvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
    ]
}

task generateDoc(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'cg.egjs.autorent.util.GenerateDocPDF'
}

task initPasswords(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'cg.egjs.autorent.util.HashPasswordUtil'
    jvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
    ]
}

jar {
    manifest {
        attributes 'Main-Class': 'cg.egjs.autorent.app.MainApp'
    }
    from configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
